refactor(core): gitignore update
 * gitignore update not to expose api keys

--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ out/
 .vscode/
 
 ### API Keys ###
-src/main/resources/client_secret_307262347372-8u4tlginioptjbvqui841lcu22o2ert0.apps.googleusercontent.com.json
+src/main/resources/client_secret.json
 src/main/resources/youtube_api_key.txt
