--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	implementation 'com.google.api-client:google-api-client:1.23.0'
+	implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+	implementation 'com.google.apis:google-api-services-youtube:v3-rev212-1.25.0'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.codehaus.groovy:groovy-all:2.5.7'
 	testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
