--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ src/main/resources/client_secret.json
 src/main/resources/stunning-octo-system.json
 src/main/resources/youtube_api_key.txt
 src/main/resources/service_account_key.txt
+src/main/resources/stunning-octo-system.p12
