--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ src/main/resources/stunning-octo-system.json
 src/main/resources/youtube_api_key.txt
 src/main/resources/service_account_key.txt
 src/main/resources/stunning-octo-system.p12
+
+node_modules/
