feat(web): front end functionality
 * registration basics
 * authentication basics

--- a/giorgirokhadze.conf
+++ b/giorgirokhadze.conf
@@ -16,6 +16,10 @@ server {
     location /user/update {
         proxy_pass       http://localhost:8080/user/update;
     }
+    
+    location /h2-console {
+        proxy_pass       http://localhost:8080/h2-console;
+    }
 
     location / {
         proxy_pass       http://localhost:4200/;
